<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
	android:title="@string/setting">
	<PreferenceCategory android:title="@string/network_mode">
		<ListPreference android:key="network_mode"
			android:title="@string/network_mode" android:entries="@array/network_mode_string_array"
			android:entryValues="@array/network_mode_values" android:persistent="true"
			android:defaultValue="0">
		</ListPreference>
	</PreferenceCategory>

	<PreferenceCategory android:title="@string/server_setting"
		android:key="server_mode">
		<ListPreference android:id="@+id/server_mode_list"
			android:entries="@array/server_mode_string_array"
			android:entryValues="@array/server_mode_values" android:key="server_mode"
			android:defaultValue="1"
			android:title="@string/server_network_mode"
			android:summary="@string/server_network_summary">
		</ListPreference>

		<EditTextPreference android:title="@string/port"
			android:key="server_port" android:numeric="integer|decimal"
			android:summary="@string/server_port_summary">
		</EditTextPreference>
	</PreferenceCategory>

	<PreferenceCategory android:key="relay_mode"
		android:title="@string/relay_setting">
		<EditTextPreference android:key="relay_server_host"
			android:title="@string/relay_server_host" 
			android:summary="@string/relay_server_host_summary">
		</EditTextPreference>

		<EditTextPreference android:title="@string/port"
			android:key="relay_server_port" 
			android:numeric="integer|decimal"
			android:summary="@string/relay_port_summary">
		</EditTextPreference>
	</PreferenceCategory>
</PreferenceScreen>

